--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,45 @@
 body {
   background: #eee;
-  font-family: sans-serif;
+  font-family: sans-serif; 
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
-}
+  padding: 8px;
+  margin: -1px;
+  font-size: 16px;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
+  padding: 8px;
+ }
 
 .content {
   background: #e3f4ff;
+  margin: 8px 0;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
+  padding: 8px;
+  margin: 4px 0;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  width: auto;
+  margin: 5px auto;
+  padding: 8px 15px;
 }
